src/App.css
#root{
    width: 100%;
    min-height: 100vh;
    background-color: #151515;
    color: #F5F5F5
}
h1, h2, h3, h4, h5, h6{
    font-family: "Fredoka", sans-serif;
}
div, p, a, link, label, button, span{
    font-family: 'Quicksand', sans-serif;
}

::selection{
  background-color: #151515;
  color: #00FF26;
}
* {
  scrollbar-width: thin;
  scrollbar-color: #00FF26 #1B1B1B;
}

*::-webkit-scrollbar {
  width: 6px;
}

*::-webkit-scrollbar-track {
  background: #1B1B1B;
}

*::-webkit-scrollbar-thumb {
  background-color: #00FF26;
  border-radius: 999px;
}

*::-webkit-scrollbar-thumb:hover {
  background-color: rgba(0, 255, 38, 0.6);
}

